[package]
name = "meesign-crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
mpecdsa = { path = "/home/jjanku/src/mpecdsa" }
# openssl = "0.10.55"
prost = "0.11"
serde = "1.0"
serde_json = "1.0"
elastic-elgamal = { version = "0.3.0-beta.1", features = ["serde"] }
rand = "0.8.5"
curve25519-dalek = { version = "3.1.0", default-features = false, features = ["alloc", "u64_backend"] }
frost-secp256k1 = { path  = "/home/jjanku/src/frost/frost-secp256k1", features = ["serde"] }
aes-gcm = "0.10.2"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.87"

[build-dependencies]
cbindgen = "0.20.0"
prost-build = "0.11"

[dev-dependencies]
p256 = { version="0.13.2", features = ["ecdsa"] }
sha2 = "0.10.7"
wasm-bindgen-test = "0.3.37"
